# PointCloudThumbnail

./: CMakeLists.txt  README.md
src/: PointCloudThumbnail.cpp
